# train_vlms_from_scratch_using_text_llms

./: .gitignore  README.md  pyproject.toml  test_pipeline.py
vlm_train/datasets/: __init__.py
vlm_train/networks/: lm_to_vlm.py  q_former.py  vit_encoder.py
vlm_train/utils/: filter_dataset.py
